[gd_scene load_steps=12 format=3 uid="uid://d3e7cljx2pkqk"]

[ext_resource type="Script" uid="uid://6fyr23ywsolu" path="res://source/screens/juego/HUD/pant_pausa.gd" id="1_okash"]
[ext_resource type="Theme" uid="uid://tanh1kklj0vh" path="res://source/screens/menus/pant_principal_tema.tres" id="2_k7li3"]
[ext_resource type="Texture2D" uid="uid://hrdbfk7u7enp" path="res://resources/images/wiiBottom.png" id="3_5xcqr"]
[ext_resource type="Texture2D" uid="uid://dfpbj10ltlspl" path="res://resources/images/wiiTop.png" id="3_a17h4"]
[ext_resource type="AudioStream" uid="uid://c11xdhsjd2n08" path="res://resources/audio/pausa.mp3" id="3_cpyyw"]
[ext_resource type="Texture2D" uid="uid://bj5kwq10uiaab" path="res://resources/images/wiiButtonGuardar_es.png" id="4_eju5q"]
[ext_resource type="Texture2D" uid="uid://c0kx42kolumib" path="res://resources/images/wiiButtonContinuar_es.png" id="5_nul1p"]
[ext_resource type="Texture2D" uid="uid://ddlgv6ag1tuq6" path="res://resources/images/wiiButtonMenu_es.png" id="8_10m1a"]

[sub_resource type="Animation" id="Animation_5xcqr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("contenedor/WiiTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640.3, -66.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("contenedor/WiiBottom:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(641.25, 635.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("contenedor/Continuar:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("contenedor/Guardar:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("contenedor/Menu:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_a17h4"]
resource_name = "Start"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("contenedor/WiiTop:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(640.3, -45), Vector2(640.3, 74)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("contenedor/WiiBottom:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(641.25, 806.5), Vector2(641.25, 637)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("contenedor/Continuar:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("contenedor/Guardar:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("contenedor/Menu:modulate")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nul1p"]
_data = {
&"RESET": SubResource("Animation_5xcqr"),
&"Start": SubResource("Animation_a17h4")
}

[node name="pantPausa" type="CanvasLayer"]
process_mode = 2
layer = 5
script = ExtResource("1_okash")

[node name="contenedor" type="Node2D" parent="."]
visible = false

[node name="fondo" type="ColorRect" parent="contenedor"]
modulate = Color(1, 1, 1, 0.180392)
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="WiiTop" type="Sprite2D" parent="contenedor"]
position = Vector2(640.3, -66.5)
scale = Vector2(2.13433, 2.12857)
texture = ExtResource("3_a17h4")

[node name="WiiBottom" type="Sprite2D" parent="contenedor"]
position = Vector2(641.25, 635.5)
scale = Vector2(2.1375, 2.1375)
texture = ExtResource("3_5xcqr")

[node name="Menu" type="Sprite2D" parent="contenedor"]
modulate = Color(1, 1, 1, 0)
position = Vector2(1138, 66)
scale = Vector2(1.05, 1.05)
texture = ExtResource("8_10m1a")

[node name="btnMenuPrin" type="Button" parent="contenedor/Menu"]
offset_left = -97.0
offset_top = -38.0
offset_right = 96.0
offset_bottom = 40.0
focus_neighbor_left = NodePath("../../Guardar/btnGuardar")
focus_neighbor_bottom = NodePath("../../Guardar/btnGuardar")
theme = ExtResource("2_k7li3")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 30

[node name="Continuar" type="Sprite2D" parent="contenedor"]
position = Vector2(350, 372)
scale = Vector2(2, 2)
texture = ExtResource("5_nul1p")

[node name="btnContinuar" type="Button" parent="contenedor/Continuar"]
offset_left = -97.0
offset_top = -36.0
offset_right = 94.0
offset_bottom = 39.0
focus_neighbor_top = NodePath("../../Menu/btnMenuPrin")
focus_neighbor_right = NodePath("../../Guardar/btnGuardar")
theme = ExtResource("2_k7li3")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 30

[node name="Guardar" type="Sprite2D" parent="contenedor"]
position = Vector2(915, 372)
scale = Vector2(2, 2)
texture = ExtResource("4_eju5q")

[node name="btnGuardar" type="Button" parent="contenedor/Guardar"]
offset_left = -97.0
offset_top = -40.0
offset_right = 97.0
offset_bottom = 38.0
focus_neighbor_left = NodePath("../../Continuar/btnContinuar")
focus_neighbor_top = NodePath("../../Menu/btnMenuPrin")
focus_neighbor_right = NodePath("../../Menu/btnMenuPrin")
theme = ExtResource("2_k7li3")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 30

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cpyyw")
autoplay = true
bus = &"SFX"

[node name="ANPPausa" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nul1p")
}

[connection signal="pressed" from="contenedor/Menu/btnMenuPrin" to="." method="_on_btn_menu_prin_pressed"]
[connection signal="pressed" from="contenedor/Continuar/btnContinuar" to="." method="_on_btn_continuar_pressed"]
[connection signal="pressed" from="contenedor/Guardar/btnGuardar" to="." method="_on_btn_guardar_pressed"]
